--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ aws/k8s_resources/terraform.tfstate
 aws/k8s_resources/terraform.tfstate.*
 aws/k8s_resources/terraform.tfstate.d/.*
 aws/k8s_resources/.terraform.tfstate.lock.info
+aws/aais.tfvars
