--- a/.github/workflows/terraform_aais_nodes.yaml
+++ b/.github/workflows/terraform_aais_nodes.yaml
@@ -31,7 +31,7 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: aws
+    working-directory: aws/aws_resources
 
 jobs:
   aais_node_dev:
@@ -107,20 +107,18 @@ jobs:
     - name: Terraform Format AWS resources
       id: format
       run: terraform fmt -recursive
-      working_directory: aws_resources
       #continue-on-error: true
 
     ## Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init AWS resources
       id: init
       run: terraform init -backend-config=../tf_s3_backend/aws_resources
-      working_directory: aws_resources
+
 
     # Checks that all Terraform configuration files adhere for syntax
     - name: Terraform Syntax AWS resources
       id: validate
       run: terraform validate -no-color -json
-      working_directory: aws_resources
       #continue-on-error: true
 
     # Generates an execution plan for Terraform
@@ -131,7 +129,7 @@ jobs:
       #run: terraform plan -var-file=aais.tfvars -out=dev_plan.out && terraform show -json dev_plan.out > dev_plan.out.json
       run: terraform plan -var-file=../aais_dev.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
       continue-on-error: true
-      working_directory: aws_resources
+
 
     - name: Terraform Plan Status AWS resources
       if: steps.plan.outcome == 'failure'
@@ -143,7 +141,6 @@ jobs:
       #if: ((github.ref == 'refs/heads/main' || github.ref == 'refs/heads/test' || github.ref == 'refs/heads/dev') && (github.event_name == 'push'))
       if: github.ref == 'refs/heads/aais_dev' && github.event_name == 'push'
       run: terraform apply -auto-approve -var-file=../aais_dev.tfvars
-      working_directory: aws_resources
 
 
 
