--- a/.github/workflows/terraform_aais_node_k8s_resources.yaml
+++ b/.github/workflows/terraform_aais_node_k8s_resources.yaml
@@ -134,4 +134,4 @@ jobs:
     - name: Terraform Apply
       id: apply
       if: github.ref == 'refs/heads/aais_dev' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_dev.tfvars -compact-warnings
+      run: terraform destroy -auto-approve -var-file=../aais_dev.tfvars -compact-warnings
