--- a/.github/workflows/terraform_carrier_node_k8s_resources.yaml
+++ b/.github/workflows/terraform_carrier_node_k8s_resources.yaml
@@ -1,19 +1,16 @@
-# This workflow is used to deploy aais_node - AWS specific resources in aws using terraform with github actions pipeline
+# This workflow is used to deploy aais_node - Kubernetes Cluster specific resources in aws using terraform with github actions pipeline
 # On pull request to aais_dev/test/prod this will run terraform init, fmt, validate and plan.
 # On push event to aais_dev/test/prod this will run terraform apply
 # Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
 # Documentation for  `aws-actions/configure-aws-credentials` is located here: https://github.com/aws-actions/configure-aws-credentials
-
 #Author: Rajesh Sanjeevi
 #Version: 1.0
-
-
-name: 'aais-node-openidl-aws-resources-pipeline-v1.0'
+name: 'aais-node-openidl-k8s-resources-pipeline-v1.0'
 on:
   push:
     paths:
-      - 'aws/aws_resources/**'
-      - 'aws/tf_s3_backend/aws_resources'
+      - 'aws/k8s_resources/**'
+      - 'aws/tf_s3_backend/k8s_resources'
 
     branches:
       - aais_dev
@@ -22,8 +19,8 @@ on:
 
   pull_request:
     paths:
-      - 'aws/aws_resources/**'
-      - 'aws/tf_s3_backend/aws_resources'
+      - 'aws/k8s_resources/**'
+      - 'aws/tf_s3_backend/k8s_resources'
 
     branches:
       - aais_dev
@@ -35,12 +32,12 @@ jobs:
     environment: aais_dev
 
     if: github.base_ref == 'aais_dev' || github.ref == 'refs/heads/aais_dev'
-    name: 'aais-node-dev-aws-resources'
+    name: 'aais-node-dev-k8s-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-        working-directory: aws/aws_resources
+        working-directory: aws/k8s_resources
     env:
       TF_VAR_aws_account_number: ${{ secrets.aws_account_number }}
       TF_VAR_aws_role_arn: ${{ secrets.aws_role_arn }}
@@ -107,22 +104,27 @@ jobs:
     - name: Terraform Format
       id: format
       run: terraform fmt -recursive
+      #continue-on-error: true
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    ## Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       id: init
-      run: terraform init -backend-config=../tf_s3_backend/aws_resources
+      run: terraform init -backend-config=../tf_s3_backend/k8s_resources
+
 
     # Checks that all Terraform configuration files adhere for syntax
     - name: Terraform Syntax
       id: validate
       run: terraform validate -no-color -json
+      #continue-on-error: true
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_dev.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+    # env:
+      #run: terraform plan -var-file=aais.tfvars -out=dev_plan.out && terraform show -json dev_plan.out > dev_plan.out.json
+      run: terraform plan -var-file=../aais_dev.tfvars -out=k8s_resources_plan.out -compact-warnings && terraform show -json k8s_resources_plan.out > k8s_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -133,18 +135,18 @@ jobs:
     - name: Terraform Apply
       id: apply
       if: github.ref == 'refs/heads/aais_dev' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_dev.tfvars
+      run: terraform apply -auto-approve -var-file=../aais_dev.tfvars -compact-warnings
 
   aais_node_test-aws_resources:
     environment: aais_test
 
     if: github.base_ref == 'aais_test' || github.ref == 'refs/heads/aais_test'
-    name: 'aais-node-test-aws-resources'
+    name: 'aais-node-test-k8s-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-        working-directory: aws/aws_resources
+        working-directory: aws/k8s_resources
     env:
       TF_VAR_aws_account_number: ${{ secrets.aws_account_number }}
       TF_VAR_aws_role_arn: ${{ secrets.aws_role_arn }}
@@ -211,22 +213,27 @@ jobs:
     - name: Terraform Format
       id: format
       run: terraform fmt -recursive
+      #continue-on-error: true
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    ## Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       id: init
-      run: terraform init -backend-config=../tf_s3_backend/aws_resources
+      run: terraform init -backend-config=../tf_s3_backend/k8s_resources
+
 
     # Checks that all Terraform configuration files adhere for syntax
     - name: Terraform Syntax
       id: validate
       run: terraform validate -no-color -json
+      #continue-on-error: true
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_test.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+    # env:
+      #run: terraform plan -var-file=aais.tfvars -out=dev_plan.out && terraform show -json dev_plan.out > dev_plan.out.json
+      run: terraform plan -var-file=../aais_test.tfvars -out=k8s_resources_plan.out -compact-warnings && terraform show -json k8s_resources_plan.out > k8s_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -237,18 +244,18 @@ jobs:
     - name: Terraform Apply
       id: apply
       if: github.ref == 'refs/heads/aais_test' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_test.tfvars
+      run: terraform apply -auto-approve -var-file=../aais_test.tfvars -compact-warnings
 
   aais_node_prod-aws_resources:
     environment: aais_prod
 
     if: github.base_ref == 'aais_prod' || github.ref == 'refs/heads/aais_prod'
-    name: 'aais-node-prod-aws-resources'
+    name: 'aais-node-prod-k8s-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-        working-directory: aws/aws_resources
+        working-directory: aws/k8s_resources
     env:
       TF_VAR_aws_account_number: ${{ secrets.aws_account_number }}
       TF_VAR_aws_role_arn: ${{ secrets.aws_role_arn }}
@@ -315,22 +322,27 @@ jobs:
     - name: Terraform Format
       id: format
       run: terraform fmt -recursive
+      #continue-on-error: true
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    ## Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       id: init
-      run: terraform init -backend-config=../tf_s3_backend/aws_resources
+      run: terraform init -backend-config=../tf_s3_backend/k8s_resources
+
 
     # Checks that all Terraform configuration files adhere for syntax
     - name: Terraform Syntax
       id: validate
       run: terraform validate -no-color -json
+      #continue-on-error: true
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_prod.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+    # env:
+      #run: terraform plan -var-file=aais.tfvars -out=dev_plan.out && terraform show -json dev_plan.out > dev_plan.out.json
+      run: terraform plan -var-file=../aais_prod.tfvars -out=k8s_resources_plan.out -compact-warnings && terraform show -json k8s_resources_plan.out > k8s_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -341,4 +353,6 @@ jobs:
     - name: Terraform Apply
       id: apply
       if: github.ref == 'refs/heads/aais_prod' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_prod.tfvars
+      run: terraform apply -auto-approve -var-file=../aais_prod.tfvars -compact-warnings
+
+
