--- a/.github/workflows/terraform_carrier_node_aws_resources.yaml
+++ b/.github/workflows/terraform_carrier_node_aws_resources.yaml
@@ -1,14 +1,13 @@
-# This workflow is used to deploy aais_node - AWS specific resources in aws using terraform with github actions pipeline
-# On pull request to aais_dev/test/prod this will run terraform init, fmt, validate and plan.
-# On push event to aais_dev/test/prod this will run terraform apply
+# This workflow is used to deploy carrier_node - AWS specific resources in aws using terraform with github actions pipeline
+# On pull request to carrier_dev/test/prod this will run terraform init, fmt, validate and plan.
+# On push event to carrier_dev/test/prod this will run terraform apply
 # Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
 # Documentation for  `aws-actions/configure-aws-credentials` is located here: https://github.com/aws-actions/configure-aws-credentials
 
 #Author: Rajesh Sanjeevi
 #Version: 1.0
 
-
-name: 'aais-node-openidl-aws-resources-pipeline-v1.0'
+name: 'carrier-node-openidl-aws-resources-pipeline-v1.0'
 on:
   push:
     paths:
@@ -16,9 +15,9 @@ on:
       - 'aws/tf_s3_backend/aws_resources'
 
     branches:
-      - aais_dev
-      - aais_test
-      - aais_prod
+      - carrier_dev
+      - carrier_test
+      - carrier_prod
 
   pull_request:
     paths:
@@ -26,16 +25,16 @@ on:
       - 'aws/tf_s3_backend/aws_resources'
 
     branches:
-      - aais_dev
-      - aais_test
-      - aais_prod
+      - carrier_dev
+      - carrier_test
+      - carrier_prod
 
 jobs:
-  aais_node_dev-aws_resources:
-    environment: aais_dev
+  carrier_node_dev-aws_resources:
+    environment: carrier_dev
 
-    if: github.base_ref == 'aais_dev' || github.ref == 'refs/heads/aais_dev'
-    name: 'aais-node-dev-aws-resources'
+    if: github.base_ref == 'carrier_dev' || github.ref == 'refs/heads/carrier_dev'
+    name: 'carrier-node-dev-aws-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -94,7 +93,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/aais_node/dev/aais.tfvars ../aais_dev.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/carrier_node/dev/carrier.tfvars ../carrier_dev.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -122,7 +121,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_dev.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+      run: terraform plan -var-file=../carrier_dev.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -132,14 +131,14 @@ jobs:
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
       id: apply
-      if: github.ref == 'refs/heads/aais_dev' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_dev.tfvars
+      if: github.ref == 'refs/heads/carrier_dev' && github.event_name == 'push'
+      run: terraform destroy -auto-approve -var-file=../carrier_dev.tfvars
 
-  aais_node_test-aws_resources:
-    environment: aais_test
+  carrier_node_test-aws_resources:
+    environment: carrier_test
 
-    if: github.base_ref == 'aais_test' || github.ref == 'refs/heads/aais_test'
-    name: 'aais-node-test-aws-resources'
+    if: github.base_ref == 'carrier_test' || github.ref == 'refs/heads/carrier_test'
+    name: 'carrier-node-test-aws-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -198,7 +197,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/aais_node/test/aais.tfvars ../aais_test.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/carrier_node/test/carrier.tfvars ../carrier_test.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -226,7 +225,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_test.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+      run: terraform plan -var-file=../carrier_test.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -236,14 +235,14 @@ jobs:
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
       id: apply
-      if: github.ref == 'refs/heads/aais_test' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_test.tfvars
+      if: github.ref == 'refs/heads/carrier_test' && github.event_name == 'push'
+      run: terraform apply -auto-approve -var-file=../carrier_test.tfvars
 
-  aais_node_prod-aws_resources:
-    environment: aais_prod
+  carrier_node_prod-aws_resources:
+    environment: carrier_prod
 
-    if: github.base_ref == 'aais_prod' || github.ref == 'refs/heads/aais_prod'
-    name: 'aais-node-prod-aws-resources'
+    if: github.base_ref == 'carrier_prod' || github.ref == 'refs/heads/carrier_prod'
+    name: 'carrier-node-prod-aws-resources'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -302,7 +301,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/aais_node/prod/aais.tfvars ../aais_prod.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/carrier_node/prod/carrier.tfvars ../carrier_prod.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -330,7 +329,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform plan -var-file=../aais_prod.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
+      run: terraform plan -var-file=../carrier_prod.tfvars -out=aws_resources_plan.out && terraform show -json aws_resources_plan.out > aws_resources_plan.out.json
       continue-on-error: true
 
     - name: Terraform Plan Status
@@ -340,5 +339,5 @@ jobs:
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
       id: apply
-      if: github.ref == 'refs/heads/aais_prod' && github.event_name == 'push'
-      run: terraform apply -auto-approve -var-file=../aais_prod.tfvars
+      if: github.ref == 'refs/heads/carrier_prod' && github.event_name == 'push'
+      run: terraform apply -auto-approve -var-file=../carrier_prod.tfvars
