--- a/.github/workflows/terraform_analytics_node_aws_resources.yaml
+++ b/.github/workflows/terraform_analytics_node_aws_resources.yaml
@@ -93,7 +93,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/analytics_node/dev/analytics.tfvars ../analytics_dev.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/analytics.tfvars ../analytics_dev.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -197,7 +197,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/analytics_node/test/analytics.tfvars ../analytics_test.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/analytics.tfvars ../analytics_test.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -301,7 +301,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        aws s3 cp s3://${{env.aws_input_bucket}}/analytics_node/prod/analytics.tfvars ../analytics_prod.tfvars
+        aws s3 cp s3://${{env.aws_input_bucket}}/analytics.tfvars ../analytics_prod.tfvars
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
