--- a/aws/templates/aais_node/aais.tfvars.template
+++ b/aws/templates/aais_node/aais.tfvars.template
@@ -173,8 +173,8 @@ s3_bucket_name_cloudtrail = <s3_bucket_name> #s3 bucket name to manage cloudtrai
 vault_password_reset = "set" #set a random string to this variable when password required to reset
 
 #--------------------------------------------------------------------------------------------------------------------
-#Name of the S3 bucket managing terraform state files
-terraform_state_s3_bucket_name = "<s3_bucket_terraform_state>"
+#Name of the S3 bucket managing terraform state files of AWS resources pipeline
+tf_state_aws_resources_s3_bucket_name = "<s3_bucket_terraform_state>"
 
 
 
