--- a/aws/templates/aais_node/aais.tfvars.template
+++ b/aws/templates/aais_node/aais.tfvars.template
@@ -174,7 +174,7 @@ vault_password_reset = "set" #set a random string to this variable when password
 
 #--------------------------------------------------------------------------------------------------------------------
 #Name of the S3 bucket managing terraform state files
-tf_state_s3_bucket_name = "<s3_bucket_terraform_state>"
+terraform_state_s3_bucket_name = "<s3_bucket_terraform_state>"
 
 
 
