--- a/aws/templates/analytics_node/analytics.tfvars.template
+++ b/aws/templates/analytics_node/analytics.tfvars.template
@@ -174,4 +174,4 @@ vault_password_reset = "set" #set a random string to this variable when password
 
 #--------------------------------------------------------------------------------------------------------------------
 #Name of the S3 bucket managing terraform state files
-tf_state_s3_bucket_name = "<s3_bucket_terraform_state>"
+terraform_state_s3_bucket_name = "<s3_bucket_terraform_state>"
