--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
           python get-pip.py --user
-          python -m pip install --user ansible=2.9.11
+          python -m pip install --user ansible==2.9.11
           ansible --version
 
       - name: Install Pip3
