--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Run Playbook
         run: |
+          pwd
           ansible-playbook deploy-network.yml -e "role=${{ github.event.inputs.role }}"
 
 
