--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -42,8 +42,8 @@ jobs:
       - name: Run Playbook
         run: |
           pwd
-          ls -l 
-          ansible-playbook deploy-network.yml -e "role=${{ github.event.inputs.role }}"
+          ls -l
+          ansible-playbook deploy-network.yml -i ./inventory/ansible_provisioners -e "role=${{ github.event.inputs.role }}"
 
 
 
