--- a/openidl-ansible/roles/baf/image/tasks/main.yml
+++ b/openidl-ansible/roles/baf/image/tasks/main.yml
@@ -10,6 +10,6 @@
 - name: Push openidl-baf image
   community.docker.docker_image:
     name: openidl-baf
-    repository: suryalnvs/openidl-baf
+    repository: ghcr.io/openidl-baf
     push: yes
     source: local
