--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -23,6 +23,9 @@ jobs:
 
     name: Healthcheck
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read 
 
     steps:
       - name: Checkout code
