--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -20,12 +20,13 @@ defaults:
 jobs:
   healthcheck:
     environment:
+      REGISTRY: ghcr.io 
 
     name: Healthcheck
     runs-on: ubuntu-latest
     permissions:
       packages: write
-      contents: read 
+      contents: read
 
     steps:
       - name: Checkout code
