--- a/openidl-ansible/deploy-network.yml
+++ b/openidl-ansible/deploy-network.yml
@@ -2,8 +2,8 @@
   gather_facts: no
 #  no_log: "{{ no_ansible_log | default(false) }}"
   tasks:
-    - include_role:
-        name: "baf/image"
+  #  - include_role:
+  #      name: "baf/image"
 
     - include_role:
         name: "baf/deploy_network"
