--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -40,6 +40,9 @@ jobs:
       - name: Install Docker
         run: |
           pip3 install docker
+
+      - name: Install ansible galaxy collection
+        run: |
           ansible-galaxy collection install community.docker
           ansible-galaxy collection install community.kubernetes
 
@@ -52,8 +55,7 @@ jobs:
 
       - name: Run Playbook
         run: |
-          pwd
-          ls -l
+          ls -l /home/runner/.ansible/collections/ansible_collections/community/
           ansible-playbook deploy-network.yml -i ./inventory/ansible_provisioners -e "role=${{ github.event.inputs.role }}"
 
 
