--- a/openidl-ansible/ansible.cfg
+++ b/openidl-ansible/ansible.cfg
@@ -2,6 +2,8 @@
 inventory_plugins = ./inventory_plugins:~/.ansible/plugins/inventory:/usr/share/ansible/plugins/inventory
 interpreter_python = auto
 
+collections_paths = /home/runner/.ansible/collections/ansible_collections
+
 # Use the YAML callback plugin.
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
