--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
-      - name: Install Ansible and utilities
+      - name: Install Ansible
         run: |
           python -m pip install --user ansible==2.9.11
           ansible --version
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run Playbook
         run: |
-          ls -l /home/runner/.ansible/collections/ansible_collections/community/
+      #    ls -l /home/runner/.ansible/collections/ansible_collections/community/
           ansible-playbook deploy-network.yml -i ./inventory/ansible_provisioners -e "role=${{ github.event.inputs.role }}"
 
 
