--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -1,19 +1,16 @@
 # This is a manual workflow, hence it must be placed in the default branch of a repository to activate and use
-
 #Author: Rajesh Sanjeevi
 #version: 1.0
 
-name: Healthcheck-Manual
+name: Manual BAF Deployment
 on:
   workflow_dispatch:
     inputs:
       role:
-        description: "Ansible role to run"
+        description: "ansible role name"
         required: true
         default: ""
 
-env:
-  REGISTRY: ghcr.io
 defaults:
   run:
     shell: bash
@@ -27,6 +24,7 @@ defaults:
   #  github_user: ${{ secrets.github_user }}
   #  github_user_token: ${{ secrets.github_user_token }}
   #  github_user_email: ${{ secrets.github_user_email }}
+     registry: ghcr.io
 
 jobs:
   healthcheck:
@@ -48,24 +46,35 @@ jobs:
         aws-secret-access-key: ${{ env.aws_secret_key }}
         aws-region: ${{ env.aws_region }}
 
-      - name: Install Ansible
+      - name: Install Ansible and dependencies
         run: |
+          pip3 install openshift
+          sudo apt-get install -y python3-requests-oauthlib
+          sudo apt-get install -y python-yaml
           python -m pip install --user ansible==2.9.11
-          ansible --version
+
+      - name: Install ansible galaxy collection for docker and k8s
+        run: |
+          ansible-galaxy collection install community.docker
+          ansible-galaxy collection install community.kubernetes:==1.2.1
+
+      - name: Setup kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+
+      - name: Update kubeconfig and set context to blockchain cluster
+        run: |
+          aws eks update-kubeconfig --region ${{ env.aws_region }} --name ${{ env.cluster_name }}
 
       - name: Install Docker
         run: |
           pip3 install docker
 
-      - name: Install ansible galaxy collection
-        run: |
-          ansible-galaxy collection install community.docker
-          ansible-galaxy collection install community.kubernetes
-
       - name: Log into GitHub Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ env.registry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
